@@ -50,9 +50,9 @@ config_dir=./configuration/
 # [monthly,season] specifies the temporal scale of the analysis
 #
 ################################
-albedo,1,monthly
+albedo,0,monthly
 sis,0,season
-surface_upward_flux,0,monthly
+surface_upward_flux,1,monthly
 tree,0,monthly
 temperature,0,season
 rain,0,season
